# python-project-lvl1

./: Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: hexlet-check.yml  main-check.yml
brain_games/: cli.py  engine.py  games_logic.py  math.py  qa.py
brain_games/games/: __init__.py  calculator.py  even.py  gcd.py  prime.py  progression.py
brain_games/qa_builders/: __init__.py  abstract.py  binary.py  number_predicate.py  progression.py
brain_games/scripts/: brain_calculator.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
tests/: test_games.py  test_games_logic.py  test_math.py  test_prime_game.py  test_qa_builders.py
