[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["uhbif19 <uhbif19@gmail.com>"]
packages = [
  { include = "brain_games" },
]

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calculator = "brain_games.scripts.brain_calculator:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[tool.poetry.dependencies]
python = "^3.9"
prompt = "^0.4.1"
icontract = "^2.4.1"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.15.1"
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
